# DailyGameHarness

./: .gitignore  Cargo.toml  README.md  STATUS.md  harness.config.json  harness.lock.json
.github/workflows/: ci.yml  deploy-pages.yml  deploy.yml
crates/daily_game_core/: Cargo.toml
crates/daily_game_core/src/: errors.rs  lib.rs  share.rs  types.rs  validation.rs
crates/daily_game_tools/: Cargo.toml
crates/daily_game_tools/src/: archive.rs  config.rs  discover.rs  fetch.rs  generate.rs  lockfile.rs  main.rs  resolver.rs  schema.rs  static_check.rs  validate.rs
crates/daily_game_wasm_support/: Cargo.toml
crates/daily_game_wasm_support/src/: bindings.rs
docs/: deployment.md
fixtures/games/command-build-game/: daily-game.config.json  package.json
fixtures/games/minimal-text-game/: daily-game.config.json
fixtures/games/second-minimal-game/: daily-game.config.json
schemas/: archive-config.schema.json  content-manifest.schema.json  date-index.schema.json  game-package-config.schema.json  game-state.schema.json  harness-config.schema.json  puzzle-common.schema.json  puzzle-resolver.schema.json  runtime-result.schema.json
scripts/: build-static.sh  deploy-s3.sh  generate-static-registry.sh  sync-games.sh  validate-games.sh
steering/daily-game-harness-spec/: checklist.md  spec.md
templates/game-package/minimal-svelte-js/: README.md  daily-game.config.json
web/: astro.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
web/scripts/: build.mjs
web/src/: global.d.ts
web/src/lib/: archive.ts  dates.ts  (+7 more)
(+2064 files in other folders)
