[package]
name="daily_game_tools"
version="0.1.0"
edition="2021"

[dependencies]
anyhow.workspace=true
chrono.workspace=true
clap={workspace=true,features=["derive"]}
serde={workspace=true,features=["derive"]}
serde_json.workspace=true
regex.workspace=true
walkdir.workspace=true
jsonschema = { version = "0.46.5", default-features = false }
